--- a/src/index.css
+++ b/src/index.css
@@ -1,90 +1,4 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-}
-.logo-container {
-	background-color: aqua;
-	display: flex;
-	align-items: center;
-	height: 10vh;
-}
-
-nav i {
-	display: inline;
-	font-size: 30px;
-}
-
-.body {
-	background-color: #ff00e4;
-	display: flex;
-	flex-direction: column;
-	min-height: 80vh;
-	min-width: 100px;
-}
-nav h3 {
-	margin-left: 0.5rem;
-}
-
-.btn {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	text-decoration: none;
-	text-align: center;
-	padding: 14px 25px;
-	color: cornsilk;
-	margin: 10rem 15rem;
-	font-size: 20px;
-	font-weight: bold;
-	background-color: darkgoldenrod;
-	width: 15rem;
-}
-
-body {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.pro-container {
-	display: flex;
-	flex-direction: column;
-	margin-top: 5rem;
-	width: 20rem;
-	height: 80vh;
-	text-align: center;
-	background-color: #f9f9f9;
-	box-sizing: border-box;
-}
-.pro-container h3 {
-	border-bottom: 1px solid black;
-	background-color: #ed50f1;
-	padding: 20px 0;
-}
-
-#btn {
-	position: relative;
-	background-color: #0b138b; /* Green */
-	border: none;
-	border-radius: 20px;
-	color: white;
-	padding: 15px 32px;
-	text-align: center;
-	text-decoration: none;
-	transform: translate(-2rem, -12rem);
-	width: 8rem;
-	font-size: 16px;
-	margin: 8rem;
-}
-.pic {
-	height: 80px;
-	width: 80px;
-	border: 2px solid black;
-	border-radius: 50px;
-	margin: 20px 0 0 6.5rem;
-}
-h5 {
-	margin: 20px 0 0 -20px;
-	font-size: 20px;
+.error {
+	color: rgb(224, 56, 56);
+	font-size: 10px;
 }
